Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Public beta
-
None
Description
Apparently in some circumstances (like in docker images) 'errno' is not set properly and the status code remains 0 even if an error was returned. We should likely remove 'errno' from the status error message since it leads to a confusing message such as:
Bad status: Service unavailable: Clock is not synchronized: Error reading clock. Clock considered unsynchronized. Errno: Success